# Machine-Learning-Notes

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  pyproject_backup.toml
01_SUPERVISED_LEARNING/: Decision_Tree_example_01.ipynb  section_01.md  section_02.md  section_03.md  tree.dot  tree_02.dot
02_UNSUPERVISED_LEARNING/: section_01.md
02_UNSUPERVISED_LEARNING/Examples/: Isolation Forest Feature Selection.ipynb
04_WOKFLOWS/: section_01.md  section_02.md  section_03.md  section_04.md  section_05.md
05_MATH/: section_03.md
06_TORCH/codes/: example_01.py  example_02.py
07_NLP/: detection_system.md
08_GRAPH/: section_01.md
09_SYSTEMS/PYMK/: description.md
diagrams/: ML.py
docs/: index.md  machine-learning-notes.md
docs/00_DATA/: README.md  section_01.md  section_02.md
docs/01_SUPERVISED_LEARNING/: section_01.md  section_02.md
docs/02_UNSUPERVISED_LEARNING/: section_02.md  section_04.md  section_05.md
docs/04_WORKFLOWS/: section_05.md
docs/05_MATH/: section_01.md  section_02.md
docs/07_NLP/: natural_language_processing.md
docs/08_GRAPH/: code_graph.md  graph_creation.md  intro.md  knowledge_graph_definitions.md  section_02.md  section_08.md  section_09.md  section_10.md
docs/09_SYSTEMS/: projects.md
docs/10_LLM/: build_llm_rag_chatbot_langchain.md  hardware_requirements.md  intro.md  model_control_protocol.md  open_source.md
docs/11_JARVIS/: intro.md  ontology_oriented_software_development.md
docs/diagrams/: ML.py  clustering_analysis_flow.py  (+1 more)
pp_tools/: README.md  __init__.py  __main__.py  make.bat  requirements.txt
(+71 files in other folders)
