[tool.poetry]
name = "pp_tools"
description = "Machine Learning Notes tools"
authors = ["Jose Luis Alonzo Velazquez <pepemxl@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pepemxl/Machine-Learning-Notes.git"
version = "0.0.5"
packages = [ {include="pp_tools"}]
[tool.poetry.dependencies]
python = "3.10.*"
termcolor = "^2.3.0"
pygments = "^2.15.1"
requests = "^2.31.0"
flatten-json = "^0.1.13"

[tool.poetry.group.dev.dependencies]
pytest = '*'
ipython = '*'
coverage = '*'
pre-commit = '*'

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.scripts]
pp_tools = 'pp_tools.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"